Explicitly use custom margins for printing to pdf

3cec2ccb0ffdd41a41ab55d4c1ba88d4866e71d1 introduced a regression because
it was assumed that the page was only printed to pdf when a filename was
given.

This is not the case when the pdf data is handed to the callback,
though. Correct this by explicitly stating when margins should be used.

Task-number: QTBUG-66654
Change-Id: I663f578ff5d01c77cc62e6f3756a17f78168a9aa
Reviewed-by: Szabolcs David <davidsz@inf.u-szeged.hu>
Reviewed-by: Jüri Valdmann <juri.valdmann@qt.io>
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>